--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -17,7 +17,7 @@
       <% @comments.each do |comment| %>
       <tr>
         <td><%= comment.user.email %></td>
-        <td><%= comment.photo_id %></td>
+        <td><%= comment.photo.created_at %></td>
         <td>
           <a href="/comments/<%= comment.id %>" class="btn btn-primary">Show</a>
           <a href="/comments/<%= comment.id %>/edit" class="btn btn-warning">Edit</a>
