--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -16,8 +16,16 @@
 
       <% @comments.each do |comment| %>
       <tr>
-        <td><%= comment.user.email %></td>
-        <td><%= comment.photo.created_at %></td>
+        <td>
+          <a href="/users/<%= comment.user.id %>">
+            <%= comment.user.email %>
+          </a>
+        </td>
+        <td>
+          <a href="/photos/<%= comment.photo.id %>">
+            <%= comment.photo.created_at %>
+          </a>
+        </td>
         <td>
           <a href="/comments/<%= comment.id %>" class="btn btn-primary">Show</a>
           
