--- a/app/views/likes/index.html.erb
+++ b/app/views/likes/index.html.erb
@@ -16,8 +16,16 @@
 
       <% @likes.each do |like| %>
       <tr>
-        <td><%= like.user.email %></td>
-        <td><%= like.photo.created_at %></td>
+        <td>
+          <a href="/users/<%= like.user.id %>">
+            <%= like.user.email %>
+          </a>
+        </td>
+        <td>
+          <a href="/photos/<%= like.photo.id %>">
+            <%= like.photo.created_at %>
+          </a>
+        </td>
         <td>
           <a href="/likes/<%= like.id %>" class="btn btn-primary">Show</a>
           <a href="/likes/<%= like.id %>/edit" class="btn btn-warning">Edit</a>
