--- a/app/views/likes/show.html.erb
+++ b/app/views/likes/show.html.erb
@@ -6,10 +6,18 @@
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>User</dt>
-      <dd><%= @like.user_id %></dd>
+      <dd>
+        <a href="/users/<%= @like.user_id %>">
+          <%= like.user.email %>
+        </a>
+      </dd>
 
       <dt>Photo</dt>
-      <dd><%= @like.photo_id %></dd>
+      <dd>
+        <a href="/photos/<%= @like.photo_id %>">
+          <%= like.photo.created_at %>
+        </a>
+      </dd>
 
     </dl>
 
